<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <!--相机，相册，取消-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/camera"
            android:textColor="@color/colorPrimary"/>

        <View
            style="@style/style_line"/>

        <TextView
            android:id="@+id/tv_album"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/album"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_white"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>