<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- android:textCursorDrawable="@null"
    @null”作用是让光标颜色和text color一样-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_white_border_gray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="true"
                android:drawableLeft="@mipmap/ic_login_username_default"
                android:drawablePadding="10dp"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="6dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_round_tran"
                android:textCursorDrawable="@null"/>

            <ImageView
                android:id="@+id/iv_delete_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:padding="10dp"
                android:src="@mipmap/ic_edittext_clear"
                android:visibility="gone"/>
        </LinearLayout>

        <View
            style="@style/style_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="true"
                android:drawableLeft="@mipmap/ic_login_password_default"
                android:drawablePadding="6dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_round_tran"
                android:textCursorDrawable="@null"/>

            <ImageView
                android:id="@+id/iv_delete_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:padding="10dp"
                android:src="@mipmap/ic_edittext_clear"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_btn_login"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</LinearLayout>